--- a/Borrow.html
+++ b/Borrow.html
@@ -29,7 +29,7 @@ p {line-height: 2}
 
 <!-- body -->
 
-<header class="w3-display-container w3-wide bgimg w3-center" id="home">
+<header class="w3-display-container w3-wide bgimg w3-center">
 <div class="w3-display-center w3-padding-32">
 		<div class="w3-bar w3-border w3-left">
 			<a class="w3-bar-item w3-button"><b>Back</b></a>
