Update and rename Borrow.html to borrow.html

--- a/borrow.html
+++ b/borrow.html
@@ -31,16 +31,18 @@ p {line-height: 2}
 
 <header class="w3-display-container w3-wide bgimg w3-center">
 <div class="w3-display-center w3-padding-32">
+	
 		<div class="w3-bar w3-border w3-left">
-			<a class="w3-bar-item w3-button"><b>Back</b></a>
+		    <a class="w3-bar-item w3-button"><b>Back</b></a>
 		</div>
 		</br></br>
+	
 		<h2> Please fill in both sections :) </h2>
 		</br>
+	
       <p><input class="w3-input w3-round-small" placeholder="Blazer Number (eg. F-XS-22)" required name="Blazer Number"></p>
       <p><input class="w3-input w3-round-small" placeholder="Borrowed Date (ddmmyyyy)" required name="Borrowed Date"></p>
-        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey" type="submit"><a class="w3-btn">submit</a>
-        </button>
+      <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey" type="submit"><a class="w3-btn">submit</a></button>
   </div>
 </header>
 
