--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@ p {line-height: 2}
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
 		<h2> Welcome to DHS Blazer Loan! </h2>
-		<p> Click "Borrow" to record down the blazer that you have just borrowed, </p>
-		<p> Click "View" to check when you borrowed your last blazer!</p>
+		<p> Click "Borrow" to record down the blazer that you have just borrowed. </p>
+		<p> Click "View" to check when you borrowed your last blazer.</p>
+		<p> Click "Download" to download the necessary forms that you have to fill up and submit to SSC.</p>
 		</br></br>
-      <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>Borrow</b></h1></a></button>
+      	  <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>Borrow</b></h1></a></button>
 	  </br></br></br>
-      <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>View</b></h1></a></button>
+          <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>View</b></h1></a></button>
+	  </br></br></br>
+	  <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>Download</b></h1></a></button>
   </div>
 </header>
 
