--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-body,h1{font-family: "Lato", sans-serif;}
+body,h2,h3{font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
     line-height: 1.8;
@@ -31,22 +31,27 @@ p {line-height: 2}
 
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
-		<h2> Welcome to DHS Blazer Loan! </h2>
-		<p> Click "Borrow" to record down the blazer that you have just borrowed. </p>
-		<p> Click "View" to check when you borrowed your last blazer.</p>
-		<p> Click "Download" to download the necessary forms that you have to fill up and submit to SSC.</p>
-		</br></br>
-      	  <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>Borrow</b></h1></a></button>
-	  </br></br></br>
-          <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>View</b></h1></a></button>
-	  </br></br></br>
-	  <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a class="w3-bar-item"><h1><b>Download</b></h1></a></button>
+	<h2> Welcome to DHS Blazer Loan! </h2>
+	<p> blazing your life</p>
+	</br>
+	
+	<p>For Students:</p>
+        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a><h3>Borrow</h3></a></button>
+	</br>
+		
+	<p>For Teachers:</p>
+	<button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a><h3>Approve</h3></a></button>
+	</br>
+	
+	<p>For SSC Staff:</p>
+        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a><h3>View/Update</h3></a></button>
+	</br>
   </div>
 </header>
 
 <!-- Footer -->
 
-<footer class="w3-center w3-white w3-padding-16">
+<footer class="w3-center w3-white w3-padding-8">
   <p>Created by DHS 2018'5C33, Zheng Yi</p>
 </footer>
 
