--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {line-height: 2}
 	</br>
 	
 	<p>For Students:</p>
-        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a href="https://dhszhengyi.github.io/savingtheworld2-BlazerLoan/borrow"><h3>Borrow</h3></a></button>
+        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a href="borrow.html"><h3>Borrow</h3></a></button>
 	</br>
 		
 	<p>For Teachers:</p>
