--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ p {line-height: 2}
 	</br>
 	
 	<p>For SSC Staff:</p>
-        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a><h3>View/Update</h3></a></button>
+        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a href="viewupdate.html"><h3>View/Update</h3></a></button>
 	</br>
   </div>
 </header>
