--- a/index.html
+++ b/index.html
@@ -22,28 +22,36 @@ p {line-height: 2}
     background-size: cover;
 	background-color:#f0ffff;
 }
+a:link {
+	text-decoration: none;
+}
+button:hover{
+	background-color: dark-grey;
+}
 </style>
 
 
 <body>
 
+<!-- body -->
+
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
-	<h2> Welcome to DHS Blazer Loan! </h2>
-	<p> blazing your life</p>
-	</br>
-	
-	<p>For Students:</p>
-        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a href="borrow.html"><h3>Borrow</h3></a></button>
-	</br>
+		<h2> Welcome to DHS Blazer Loan! </h2>
+		<p> blazing your life</p>
+		</br>
 		
-	<p>For Teachers:</p>
-	<button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a><h3>Approve</h3></a></button>
-	</br>
-	
-	<p>For SSC Staff:</p>
-        <button class="w3-button w3-light-grey w3-round-large w3-hover-dark-grey"><a href="view_update.html"><h3>View/Update</h3></a></button>
-	</br>
+		<p>For Students:</p>
+        <button class="w3-button w3-light-grey w3-round-large"><a href="borrow.html"><h3>Borrow</h3></a></button>
+	    </br>
+		
+		<p>For Teachers:</p>
+		<button class="w3-button w3-light-grey w3-round-large"><a><h3>Approve</h3></a></button>
+		</br>
+		
+		<p>For SSC Staff:</p>
+        <button class="w3-button w3-light-grey w3-round-large"><a href="view_update.html"><h3>View/Update</h3></a></button>
+		</br>
   </div>
 </header>
 
