--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+        
 <style>
-body,h2,h3{font-family: "Lato", sans-serif;}
+body,h2,h3 {
+    font-family: "Lato", sans-serif;
+}
 body, html {
     height: 100%;
     line-height: 1.8;
 }
-p {line-height: 2}
+p {
+    line-height: 2;
+}
 .bgimg {
     min-height: 100%;
     background-position: center;
@@ -33,8 +38,6 @@ button:hover{
 
 <body>
 
-<!-- body -->
-
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
 		<h2> Welcome to DHS Blazer Loan! </h2>
@@ -42,18 +45,19 @@ button:hover{
 		</br>
 		
 		<p>For Students:</p>
-        <button class="w3-button w3-light-grey w3-round-large"><a href="borrow.html"><h3>Borrow</h3></a></button>
-	    </br>
+                <button class="w3-button w3-light-grey w3-round-large"><a href="borrow.html"><h3>Borrow</h3></a></button>
+	        </br>
 		
 		<p>For Teachers:</p>
 		<button class="w3-button w3-light-grey w3-round-large"><a><h3>Approve</h3></a></button>
 		</br>
 		
 		<p>For SSC Staff:</p>
-        <button class="w3-button w3-light-grey w3-round-large"><a href="view_update.html"><h3>View/Update</h3></a></button>
+                <button class="w3-button w3-light-grey w3-round-large"><a href="view_update.html"><h3>View/Update</h3></a></button>
 		</br>
   </div>
 </header>
 
 </body>
+
 </html>
