--- a/borrow.html
+++ b/borrow.html
@@ -10,12 +10,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-body{font-family: "Lato", sans-serif;}
+body {
+    font-family: "Lato", sans-serif;
+}
 body, html {
     line-height: 1.8;
 }
-p {line-height: 2}
-
+p {
+    line-height: 2
+}
 .bgimg {
     background-position: center;
 	background-color:#f0ffff;
@@ -30,7 +33,7 @@ p {line-height: 2}
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
 		<div class="w3-bar w3-border w3-left">
-			<a class="w3-button">Back</a>
+		<a class="w3-button">Back</a>
 		</div>
 		<br><br>
 
@@ -86,9 +89,9 @@ p {line-height: 2}
 			<div class="row">
 			<form action="/action_page.php">
 				Start Date:
-				<input type="date" name="startdate">
+				<input type="date" name="startdate1">
 				End Date:
-				<input type="date" name="enddate">
+				<input type="date" name="enddate1">
 			</form>
 			</div>
 			<br>
@@ -99,9 +102,9 @@ p {line-height: 2}
 			<div class="row">
 			<form action="/action_page.php">
 				Start Date:
-				<input type="date" name="startdate">
+				<input type="date" name="startdate2">
 				End Date:
-				<input type="date" name="enddate">
+				<input type="date" name="enddate2">
 			</form>
 			</div>
 			<br>
