--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ button:hover{
 	        </br>
 		
 		<p>For Teachers:</p>
-		<button class="w3-button w3-light-grey w3-round-large"><a><h3>Approve</h3></a></button>
+		<button class="w3-button w3-light-grey w3-round-large"><a href="approve.html"><h3>Approve</h3></a></button>
 		</br>
 		
 		<p>For SSC Staff:</p>
