--- a/borrow.html
+++ b/borrow.html
@@ -81,10 +81,10 @@ p {
 			</select>
 			</form>
 					
-		<p><input class="w3-input w3-round-small" placeholder="Mobile Number" required name="Mobile Number" maxlength="8" size="8"></p>
+		<p><input class="w3-input w3-round-small" name="phone" placeholder="Mobile Number" required name="Mobile Number" maxlength="8" size="8"></p>
 		
 		<!-- Event 1-->
-			<p><input class="w3-input w3-round-small" placeholder="Event Name 1" required name="Event Name"></p>
+			<p><input class="w3-input w3-round-small" placeholder="Event Name 1" required name="Event Name" name="event1"></p>
 		
 			<div class="row">
 			<form action="/action_page.php">
@@ -97,7 +97,7 @@ p {
 			<br>
 		
 		<!-- Event 2-->
-			<p><input class="w3-input w3-round-small" placeholder="Event Name 2 (if any)"></p>
+			<p><input class="w3-input w3-round-small" placeholder="Event Name 2 (if any)" name="event2"></p>
 		
 			<div class="row">
 			<form action="/action_page.php">
