--- a/approve.html
+++ b/approve.html
@@ -11,7 +11,8 @@
 <body>
 
 <!-- display student's request in table form, separate the approved & not yet approved -->
-  	  
+<header class="w3-display-container w3-wide bgimg w3-center" id="home">
+<div class="w3-display-center w3-padding-32">
   <table>
       <tr>
 		  <th>Student</th>
@@ -45,6 +46,8 @@
         </div>
         </div>
         </div>
+</div>
+</header>
                   
 </body>
 
