--- a/borrow.html
+++ b/borrow.html
@@ -33,7 +33,7 @@ p {
 <header class="w3-display-container w3-wide bgimg w3-center" id="home">
 <div class="w3-display-center w3-padding-32">
 		<div class="w3-bar w3-border w3-left">
-		<a class="w3-button" href="./borrow.html">Back</a>
+		<a class="w3-button" href="./index.html">Back</a>
 		</div>
 		<br><br>
 
