--- a/approve.html
+++ b/approve.html
@@ -8,6 +8,22 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<style>
+body {
+    font-family: "Lato", sans-serif;
+}
+body, html {
+    line-height: 1.8;
+}
+p {
+    line-height: 2
+}
+.bgimg {
+    background-position: center;
+	background-color:#f0ffff;
+}
+</style>
+
 <body>
 
 <!-- display student's request in table form, separate the approved & not yet approved -->
