--- a/borrow.html
+++ b/borrow.html
@@ -111,11 +111,12 @@ p {
 
 		<!-- Choose Teacher-->
 		<form action="/action_page.php">
-		Teacher In-charge:
-		</form>
+		Teacher In-charge: 
 
-		<input type="text" placeholder="Search your Teacher In-charge" id="search_term" required="Teacher In-charge">
-		<input type="submit" value="Search" id="search_button">
+			<select>
+  			<option href="gi.soongchee@dhs.sg">Gi Soong Chee</option>
+			</select>
+		</form>
 		<br>
 		<br>
 		
